# openlan-cgw

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.debug  Dockerfile.proxy  Dockerfile.test_env  Makefile  README.md  build.rs  compose.yaml  run_cgw.sh  run_proxy.sh
.github/workflows/: ci.yml
api/: cnc_api.yaml  cnc_res_api.yaml  events.yaml
certs/: localhost.crt  localhost.key
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  psp.yaml  pvc.yaml  role.yaml  rolebinding.yaml  secret-certs.yaml  secret-db-cert.yaml  secret-env.yaml  secret-regcred.yaml  service.yaml
src/: cgw_app_args.rs  cgw_connection_processor.rs  cgw_connection_server.rs  cgw_db_accessor.rs  cgw_device.rs  cgw_devices_cache.rs  cgw_errors.rs  cgw_kafka_init.rs  cgw_metrics.rs  cgw_nb_api_listener.rs  cgw_remote_client.rs  cgw_remote_discovery.rs  cgw_remote_server.rs  cgw_runtime.rs  cgw_tls.rs  cgw_ucentral_ap_parser.rs  cgw_ucentral_messages_queue_manager.rs  cgw_ucentral_parser.rs  cgw_ucentral_switch_parser.rs  cgw_ucentral_topology_map.rs  localhost.crt  main.rs
src/cgw-common/: Cargo.toml
src/cgw-common/src/: cgw_app_args.rs  cgw_devices_cache.rs  cgw_tls.rs  cgw_ucentral_ap_parser.rs  cgw_ucentral_parser.rs  cgw_ucentral_switch_parser.rs  lib.rs
src/proto/: cgw.proto
src/proxy/: main.rs  proxy_connection_processor.rs  proxy_connection_server.rs  proxy_remote_discovery.rs  proxy_runtime.rs
tests/: conftest.py  metrics.py  requirements.txt  run.sh  test_cgw_basic.py  test_cgw_infra_events.py  test_cgw_infra_groups.py  test_cgw_infras.py  test_cgw_infras_msg_queue.py  test_cgw_malformed_packets.py  test_cgw_multi_instances.py
utils/cert_generator/: README.md  ca.conf  generate_certs.sh
utils/cert_generator/certs/ca/: ca.crt  ca.key  ca.srl
utils/cert_generator/certs/client/: base.crt  base.key  macs.txt
utils/cert_generator/certs/server/: gw.crt  gw.key
utils/client_simulator/: .gitignore  Dockerfile  Makefile  README.md  certs  macs.txt  main.py  runsingle  single.py
utils/client_simulator/data/: message_templates.json
utils/client_simulator/sim_data/: message_templates.json
utils/client_simulator/src/: log.py  simulation_runner.py  utils.py
utils/docker/: StartMultiCGW.py  client.properties.j2  docker-compose-cluster.yml  docker-compose-template.yml.j2  docker-compose.yml  postgresql.env
utils/docker/certs/: server.crt  server.key
utils/docker/postgresql/: init-db.sh
utils/helm/basic/templates/: broker-deployment.yaml  postgresql-cm0-configmap.yaml  postgresql-deployment.yaml  postgresql-env-configmap.yaml  postgresql-service.yaml  redis-deployment.yaml
utils/helm/cluster/: Chart.yaml
utils/helm/cluster/templates/: broker-deployment.yaml  clickhouse-01-cm0-configmap.yaml  clickhouse-01-cm1-configmap.yaml  clickhouse-01-deployment.yaml  clickhouse-01-service.yaml  clickhouse-02-cm0-configmap.yaml  clickhouse-02-cm1-configmap.yaml  clickhouse-02-deployment.yaml  clickhouse-02-service.yaml  clickhouse-03-cm0-configmap.yaml  clickhouse-03-cm1-configmap.yaml  clickhouse-03-deployment.yaml  clickhouse-03-service.yaml  clickhouse-keeper-01-cm0-configmap.yaml  clickhouse-keeper-01-deployment.yaml  clickhouse-keeper-01-service.yaml  clickhouse-keeper-02-cm0-configmap.yaml  clickhouse-keeper-02-deployment.yaml  clickhouse-keeper-02-service.yaml  clickhouse-keeper-03-cm0-configmap.yaml  clickhouse-keeper-03-deployment.yaml  clickhouse-keeper-03-service.yaml  coord1-deployment.yaml  coord1-service.yaml  coord2-deployment.yaml  coord2-service.yaml  coord3-deployment.yaml  coord3-service.yaml  etcd1-deployment.yaml  etcd1-service.yaml  etcd2-deployment.yaml  etcd2-service.yaml  etcd3-deployment.yaml  etcd3-service.yaml  haproxy-deployment.yaml  haproxy-service.yaml  patroni-env-configmap.yaml  patroni1-claim0-persistentvolumeclaim.yaml  patroni1-deployment.yaml  patroni1-service.yaml  (+14 more)
utils/helm/templates/: broker-service.yaml
utils/kafka_producer/: .gitignore  fill_groups.sh  group_header_set.sh  infras_header_set.sh  main.py  run.sh  single_group_add.sh  single_group_add_to_shard.sh  single_group_del.sh  single_infra_add.sh  single_infra_del.sh  single_infra_msg.sh  topomap_generate.sh  topomap_generate_timeout_set.sh
utils/kafka_producer/data/: message_template.json
utils/kafka_producer/kafka_data/: cfg_ap_basic.json  cfg_ap_basic_invalid.json  cfg_switch_basic.json  cfg_switch_basic_invalid.json  malformed_message_template.json  message_template.json
utils/kafka_producer/src/: admin.py  cli_parser.py  consumer.py  log.py  producer.py  utils.py
utils/psql_client/: psql_client.py
utils/redis_client/: redis_client.py
utils/toolbox/: Dockerfile  README.md  buildit
