[package]
name = "ucentral-cgw"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
env_logger = "0.5.0"
log = "0.4.20"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "*", features = ["full"] }
tokio-tungstenite = { version = "*" }
tokio-rustls = "0.26.0"
tokio-postgres = { version = "0.7.10", features = ["with-eui48-1"]}
tokio-pg-mapper = "0.2.0"
tungstenite = { version = "*"}
mio = "0.6.10"
futures-util = { version = "0.3.0", default-features = false }
futures-channel = "0.3.0"
futures-executor = { version = "0.3.0", optional = true }
futures = "0.3.0"
rlimit = "0.10.1"
tonic = "0.10.2"
prost = "0.12"
rdkafka = "0.35.0"
eui48 = { version = "1.1.0", features = ["serde"]}
uuid = { version = "1.6.1", features = ["serde"] }
redis-async = "0.16.1"
warp = "*"
prometheus = { version = "*", features = ["process"] }
lazy_static = "*"
petgraph = { version = "0.6.4", features = ["stable_graph"] }
flate2 = "1.0.28"
base64 = "0.22.0"
rustls-pemfile = "2.1.2"
rustls-pki-types = "1.7.0"
x509-parser = "0.16.0"
chrono = "0.4.38"
derive_more = "0.99.17"

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"
