[package]
name = "ucentral-cgw"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.85" }
env_logger = { version = "0.11.3" }
log = { version = "0.4.20" }
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tokio-tungstenite = { version = "0.23.0" }
tokio-rustls = { version = "0.26.0" }
tokio-postgres = { version = "0.7.10", features = ["with-eui48-1"] }
tokio-postgres-rustls = { version = "0.12.0" }
tokio-pg-mapper = { version = "0.2.0" }
tungstenite = { version = "0.23.0" }
futures-util = { version = "0.3.0", default-features = false }
futures-channel = { version = "0.3.0" }
futures-executor = { version = "0.3.0", optional = true }
futures = { version = "0.3.0" }
rlimit = { version = "0.10.1" }
tonic = { version = "0.11.0" }
prost = { version = "0.12" }
rdkafka = { version = "0.36.2" }
eui48 = { version = "1.1.0", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde"] }
redis = { version = "0.25.3", features = [
    "tokio-rustls-comp",
    "tls-rustls-insecure",
] }
warp = { version = "0.3.7" }
prometheus = { version = "0.13.4", features = ["process"] }
lazy_static = { version = "1.4.0" }
petgraph = { version = "0.6.4", features = ["stable_graph"] }
flate2 = { version = "1.0.28" }
base64 = { version = "0.22.0" }
rustls-pemfile = { version = "2.1.2" }
rustls-pki-types = { version = "1.7.0" }
x509-parser = { version = "0.16.0" }
chrono = { version = "0.4.38" }
derive_more = { version = "0.99.17" }
reqwest = { version = "0.12.5", features = ["json"] }
jsonschema = { version = "0.18.0" }
url = { version = "2.5.2" }
nix = { version = "0.29.0", features = ["net"] }

[build-dependencies]
tonic-build = "0.11.0"
prost-build = "0.12.0"
